<resources>
    <string name="app_name">Menu</string>
    <string name="suggest_menu">Suggest Menu</string>
    <string name="add_new_menu">Add New Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tea">Tea</string>
    <string name="normal">Normal</string>
    <string name="choose_the_menu_type">Choose the menu type:</string>
    <string name="complete_the_menu">Complete The Menu</string>
    <string name="add">Add</string>
    <string name="enter_menu_item">Enter Menu Item</string>
    <string name="random">RANDOM</string>
    <string name="new_menu">New Menu</string>
    <string name="new_menu_item">New Menu Item</string>
    <string name="suggest_new_menu">Suggest New Menu</string>
</resources>